--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tip Calcualtor</title>
+  <link rel="shortcut icon" href="https://img.freepik.com/free-vector/woman-explaining-girl-how-use-calculator-flyer-template_74855-14758.jpg?ga=GA1.1.1211554208.1733224352&semt=ais_hybrid" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -63,7 +64,7 @@
     document.getElementById('tip').innerHTML = '';
     document.getElementById('total').innerHTML = '';
     }
-    
+
   </script>
 </body>
 
